--- a/src/client/scss/landing_page.scss
+++ b/src/client/scss/landing_page.scss
@@ -49,7 +49,7 @@
   flex-flow: column;
 }
 .cover main img {
-  width: 30%;
+  width: 20%;
 }
 
 .cover p {
@@ -158,6 +158,12 @@
   display: none;
 }
 
+@media (max-width: 996px) {
+	.cover main img {
+		width: 30%;
+	}
+		
+}
 /* End of customization, do not edit below. */
 
 // Import full Spectre source code
