--- a/src/client/scss/_variables.scss
+++ b/src/client/scss/_variables.scss
@@ -5,7 +5,7 @@
 
 // Core colors
 
-$primary-color: #e57917;
+$primary-color: #8959a8;
 $secondary-color: lighten($primary-color, 45%);
 $code-color: #525258;
 $warning-color: #ffebd5a9;
