--- a/src/client/scss/_docs_sidebar.scss
+++ b/src/client/scss/_docs_sidebar.scss
@@ -60,7 +60,7 @@
 .docs-sidebar .docs-nav > .menu-item {
   margin: 0;
   list-style-type: none;
-  padding: 0.8rem 1rem;
+  padding: 0 1rem 0.8rem 1rem;
   font-size: 0.7rem;
 }
 .accordion .accordion {
