--- a/src/client/scss/landing_page.scss
+++ b/src/client/scss/landing_page.scss
@@ -1,32 +1,39 @@
 @import "_variables.scss";
-// CSS for landing page
+@import "node_modules/spectre.css/src/spectre";
+
+ul {
+  margin: 0.5rem 0;
+}
+
+ol {
+  margin: 1rem 0;
+}
 
 .cover {
   align-items: center;
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
   align-content: center;
   align-items: center;
-  justify-content: start;
+  justify-content: center;
   padding: 1rem;
 }
 
 .cover::after {
   content: " ";
   display: block;
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
-  width: 100%;
-  height: 100%;
+  min-width: 100%;
+  min-height: 100%;
   z-index: -100;
   opacity: 0.6;
-  background-image: url("http://placekitten.com/1500/1000");
   background-repeat: no-repeat;
   background-position: 50% 0;
   -ms-background-size: cover;
@@ -49,7 +56,7 @@
   flex-flow: column;
 }
 .cover main img {
-  width: 20%;
+  width: 15%;
 }
 
 .cover p {
@@ -86,8 +93,8 @@
 }
 
 .cover ul li {
-  font-size: 0.9rem;
-  height: 2rem;
+  font-size: 0.8rem;
+  min-height: 2rem;
   padding: 0.35rem 0.6rem;
   background: $primary-color;
   border-color: $primary-color;
@@ -159,12 +166,8 @@
 }
 
 @media (max-width: 996px) {
-	.cover main img {
-		width: 30%;
-	}
-		
+  .cover main img {
+    // max-width: %;
+    min-width: 20%;
+  }
 }
-/* End of customization, do not edit below. */
-
-// Import full Spectre source code
-@import "node_modules/spectre.css/src/spectre";
