--- a/src/client/scss/_variables.scss
+++ b/src/client/scss/_variables.scss
@@ -9,7 +9,7 @@ $primary-color: #8959a8;
 $secondary-color: lighten($primary-color, 45%);
 $code-color: #525258;
 $warning-color: #ffebd5a9;
-$dark-color: #242930;
+$dark-color: #1f2122;
 $bg-color: lighten($dark-color, 82%);
 
 // $gray-color: lighten($dark-color, 55%);
