--- a/src/client/scss/docs.scss
+++ b/src/client/scss/docs.scss
@@ -4,7 +4,7 @@
 @import "node_modules/spectre.css/src/spectre.scss";
 @import "node_modules/spectre.css/src/spectre-exp.scss";
 @import "node_modules/spectre.css/src/spectre-icons.scss";
-@import "node_modules/highlight.js/scss/railscasts.scss";
+@import "node_modules/highlight.js/scss/obsidian.scss";
 
 @import "_docs_navbar.scss";
 @import "_docs_search.scss";
